# Librarian-Node

./: .gitignore  Cargo.toml  LICENSE  README.md  source-README.md
librarian-contracts/: Cargo.toml
librarian-contracts/examples/: serialization_proof.rs
librarian-contracts/src/: capabilities.rs  common.rs  custody.rs  errors.rs  evidence.rs  evidence_packet.rs  identity.rs  lib.rs  lifecycle.rs  qualification_request.rs  receipts.rs  residency.rs  residency_status.rs  serialization.rs
librarian-contracts/src/allocation/: allocation_receipt.rs  capability_match.rs  mod.rs  suitability.rs
librarian-contracts/src/anomaly_detection/: baseline.rs  deviation.rs  mod.rs  thresholds.rs
librarian-contracts/src/bootstrap/: assessment.rs  mod.rs  plan.rs
librarian-contracts/src/bridge/: client.rs  mod.rs
librarian-contracts/src/capability_evidence/: claim.rs  evidence_reference.rs  lifecycle.rs  mod.rs  verification_state.rs
librarian-contracts/src/core_integration/: discovery.rs  mod.rs  model.rs  node_projection.rs  sync_request.rs
librarian-contracts/src/custody/: custody_chain.rs  integrity.rs  mod.rs  provenance_query.rs  receipt_envelope.rs  retention.rs
librarian-contracts/src/evidence_classification/: catalog.rs  finding.rs  mod.rs  review.rs
librarian-contracts/src/evidence_intelligence/: allocation_accuracy.rs  capability_effectiveness.rs  findings.rs  mod.rs  workload_outcomes.rs
librarian-contracts/src/fleet/: capability_comparison.rs  fleet_health.rs  fleet_operations.rs  mod.rs  node_inventory.rs
librarian-contracts/src/fleet_trust/: mod.rs
librarian-contracts/src/model_runtime/: link.rs  mod.rs  (+1 more)
librarian-contracts/tests/: decisions001_records.rs  entity001_registry.rs  governance_integration.rs  mqr_qualification.rs  permissions001_access.rs  storage001_migrations.rs  wo005_runtime_integration.rs  wo006_linux_integration.rs
librarian-core/: Cargo.toml
librarian-core/src/: connection.rs  db.rs  lib.rs  migrations.rs
librarian-core/tests/: batch_qualification_test.rs  bridge_integration_test.rs  capability_evidence_adapter_test.rs  capability_evidence_adversarial_test.rs  capability_evidence_benchmark_adapters_test.rs  capability_evidence_model_test.rs  capability_evidence_operational_fixtures_test.rs  capability_evidence_profile_test.rs  capability_evidence_quantization_differential_test.rs  capability_evidence_replay_test.rs  capability_evidence_review_test.rs  comparative_persistence_test.rs  custom_evidence_integration_test.rs  registry_persistence_test.rs  regression_harness.rs  release_trust_test.rs
librarian-node/: Cargo.toml
librarian-node/src/: lib.rs  main.rs  server.rs
librarian-node/tests/: integration_test.rs
(+351 files in other folders)
